fix: In tablet view, the spacing between the description and the cards should be medium (md)

--- a/editor-components/feature/feature38/feature38.module.scss
+++ b/editor-components/feature/feature38/feature38.module.scss
@@ -137,6 +137,16 @@
     }
 }
 
+@container (max-width: #{$composer-tablet-width}) {
+    .container {
+        .max-content {
+            .content-wrapper {
+                gap: var(--composer-gap-md);
+            }
+        }
+    }
+}
+
 @container (max-width: #{$composer-phone-width}) {
     .container {
         .max-content {
